--- a/package.json
+++ b/package.json
@@ -3,21 +3,20 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-
   "scripts": {
     "dev": "vite",
     "build-frontend": "tsc -b && vite build",
     "build-server": "tsc -p ./srcServer/tsconfig.json",
     "start-server": "node --env-file ./.env ./distServer/server.js",
-    "restart-server": "clear && npm run build-server && npm run start-server",
+    "restart-server": "npm run build-server && npm run start-server",
     "predeploy": "npm run build-frontend && npm run build-server",
     "lint": "eslint .",
     "preview": "vite preview"
   },
-
   "dependencies": {
     "cors": "^2.8.6",
     "express": "^5.2.1",
+    "firebase": "^12.9.0",
     "firebase-admin": "^13.6.0",
     "jsonwebtoken": "^9.0.3",
     "react": "^19.2.0",
@@ -26,7 +25,6 @@
     "zod": "^4.3.6",
     "zustand": "^5.0.11"
   },
-
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/cors": "^2.8.19",
