--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^12.9.0",
     "firebase-admin": "^13.6.0",
     "jsonwebtoken": "^9.0.3",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router": "^7.13.0",
